--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <!--<script type="text/javascript" src="jquery.serialScroll-1.2.2-min.js"> </script> -->
    <!--<script type="text/javascript" src="autoscroll.js"></script>-->
     <style>
-    '/*#scrollpad {
+    /*#scrollpad {
       border-radius: 5px;
       position: fixed;
       margin-left: 450px;
@@ -12,7 +12,7 @@
       border: 1px solid #000;
       overflow: hidden;
       opacity: 0.4
-    }*/
+    }
 
     body {
         width: 200%
@@ -21,7 +21,7 @@
     div img {
         min-width:100%;
         min-height:100%;
-    }
+    }*/
     </style>
   </head>
 <body>
